--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 
 <h1>This is the home page</h1>
-<a href="/about">Go to about page</a>
+<a href="/about">Go to about page</a></br>
+<a href="/articles">Go to Article page</a>
